phase 2 du correctifs d'import
